# geometry-dash

./: .gitignore  .pylintrc  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  cli.py  playground.py  pyproject.toml  requirements.txt  setup.py  tests.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: comment.py  download_level.py  music_library.py  song.py  user.py
gd/: __init__.py  _helpers.py  client.py  cosmetics.py  cryptography.py  decode.py  enums.py  errors.py  exceptions.py  ext.py  gd.py  gdobject.py  helpers.py  level.py  objects.py  parse.py  song.py  str_helpers.py  type_hints.py  user.py
gd/entities/: cosmetics.py  entity.py  enums.py  level.py  song.py  user.py
gd/gamesave/: gamesave.py  helpers.py
gd/models/: enums.py  icons.py  level.py  song.py  user.py  users.py
gd/models/spreadsheet/: gauntlets.json
gd/objects/: comments.py  cosmetics.py  enums.py  level.py  object.py  song.py  user.py  users.py
unfinished/gamesave/: __init__.py  gamesave.py  helpers.py
